# moonlight-qt

./: .gitignore  AGENTS.md  CLAUDE.md  FILE_LAYOUT.txt  INTEGRATION_TEST_MODULE_ANALYSIS.md  build-incremental.ps1  build.bat  build.ps1  d3d11-cuda-interop.md  run-test.ps1  test-connect-screen.py  test-main.cpp
.github/instructions/: default.instructions.md
app/: app.pro  main.cpp  qml.qrc  version.txt
app/acer_sr/: CMakeLists.txt  moonlight_acer_sr.cpp  smoke_test.cpp
app/backend/: computermanager.cpp  computermanager.h  connectionscreenserver.cpp  connectionscreenserver.h  connectscreenserver.cpp  connectscreenserver.h  logmanager.cpp  logmanager.h  nvhttp.cpp  systemproperties.cpp  systemproperties.h
app/cli/: commandlineparser.cpp  commandlineparser.h  pair.cpp  pair.h
app/gui/: CliStartStreamSegue.qml  ConnectScreenView.qml  LogView.qml  PcView.qml  SettingsView.qml  StreamSegue.qml  main.qml
app/settings/: streamingpreferences.cpp  streamingpreferences.h
app/streaming/input/: input.cpp
app/streaming/video/: acer_sr_sink.cpp  acer_sr_sink.h  convert_to_stereo.cpp  convert_to_stereo.h  ffmpeg.cpp  ffmpeg.h
scripts/: build-arch.bat  run-acer-sr-smoke.ps1  run-acer-sr.ps1
scripts/appveyor/: qmake.bat  qtpaths.bat  target_qt.conf
tests/: integration_test.cpp  integration_test.h  test-main.cpp
wix/Moonlight/: Product.wxs
